--- a/src/application/Editor.fxml
+++ b/src/application/Editor.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <MenuBar prefHeight="32.0" prefWidth="600.0">
@@ -26,13 +25,19 @@
               <MenuItem mnemonicParsing="false" text="About" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Import">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Song" />
+                  <MenuItem mnemonicParsing="false" text="Album" />
+               </items>
+            </Menu>
         </menus>
       </MenuBar>
       <SplitPane dividerPositions="0.5" layoutX="237.0" layoutY="113.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
         <items>
-          <AnchorPane>
+          <AnchorPane prefHeight="347.0" prefWidth="295.0">
                <children>
-                  <HBox prefHeight="366.0" prefWidth="295.0">
+                  <HBox prefHeight="347.0" prefWidth="295.0">
                      <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
@@ -58,19 +63,25 @@
                               <ListView prefHeight="366.0" prefWidth="295.0" />
                            </children>
                         </VBox>
+                        <VBox layoutX="232.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Genre" />
+                              <ListView prefHeight="366.0" prefWidth="295.0" style="-fx-background-color: lightgray;" />
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="366.0" prefWidth="215.0">
                <children>
-                  <HBox prefHeight="193.0" prefWidth="281.0">
+                  <HBox prefHeight="137.0" prefWidth="281.0" style="-fx-background-color: white;">
                      <children>
                         <Label prefHeight="21.0" prefWidth="118.0" text="Album Art" />
                         <ImageView fitHeight="90.0" fitWidth="178.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </HBox>
-                  <HBox layoutY="208.0" prefHeight="158.0" prefWidth="295.0">
+                  <HBox layoutY="146.0" prefHeight="199.0" prefWidth="295.0" style="-fx-background-color: white;">
                      <children>
                         <VBox prefHeight="158.0" prefWidth="288.0">
                            <children>
@@ -85,5 +96,6 @@
             </AnchorPane>
         </items>
       </SplitPane>
+      <TextArea layoutX="-1.0" layoutY="379.0" prefHeight="21.0" prefWidth="600.0" />
    </children>
 </AnchorPane>
