--- a/src/application/Editor.fxml
+++ b/src/application/Editor.fxml
@@ -27,8 +27,8 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Import">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Song" />
-                  <MenuItem mnemonicParsing="false" text="Album" />
+                  <MenuItem fx:id="importSong" mnemonicParsing="false" text="Song" />
+                  <MenuItem fx:id="importAlbum" mnemonicParsing="false" text="Album" />
                </items>
             </Menu>
         </menus>
