--- a/src/application/Editor.fxml
+++ b/src/application/Editor.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <MenuBar prefHeight="32.0" prefWidth="600.0">
+      <MenuBar prefHeight="32.0" prefWidth="600.0" AnchorPane.bottomAnchor="568.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -37,36 +37,36 @@
         <items>
           <AnchorPane prefHeight="347.0" prefWidth="295.0">
                <children>
-                  <HBox prefHeight="347.0" prefWidth="295.0">
+                  <HBox prefHeight="347.0" prefWidth="295.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Label text="#" />
-                              <ListView layoutX="10.0" layoutY="110.0" prefHeight="366.0" prefWidth="295.0" style="-fx-background-color: lightgray;" />
+                              <ListView layoutX="10.0" layoutY="110.0" prefHeight="525.0" prefWidth="99.0" style="-fx-background-color: lightgray;" />
                            </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Label text="Artist" />
-                              <ListView prefHeight="366.0" prefWidth="295.0" />
+                              <ListView prefHeight="525.0" prefWidth="295.0" />
                            </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Label text="Album" />
-                              <ListView prefHeight="366.0" prefWidth="295.0" style="-fx-background-color: lightgray;" />
+                              <ListView prefHeight="525.0" prefWidth="295.0" style="-fx-background-color: lightgray;" />
                            </children>
                         </VBox>
                         <VBox layoutX="206.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Label text="Title" />
-                              <ListView prefHeight="366.0" prefWidth="295.0" />
+                              <ListView prefHeight="525.0" prefWidth="295.0" />
                            </children>
                         </VBox>
                         <VBox layoutX="232.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Label text="Genre" />
-                              <ListView prefHeight="366.0" prefWidth="295.0" style="-fx-background-color: lightgray;" />
+                              <ListView prefHeight="525.0" prefWidth="295.0" style="-fx-background-color: lightgray;" />
                            </children>
                         </VBox>
                      </children>
@@ -75,28 +75,36 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="366.0" prefWidth="215.0">
                <children>
-                  <HBox prefHeight="137.0" prefWidth="281.0" style="-fx-background-color: white;">
-                     <children>
-                        <Label prefHeight="21.0" prefWidth="118.0" text="Album Art" />
-                        <ImageView fitHeight="90.0" fitWidth="178.0" pickOnBounds="true" preserveRatio="true" />
-                     </children>
-                  </HBox>
-                  <HBox layoutY="146.0" prefHeight="199.0" prefWidth="295.0" style="-fx-background-color: white;">
-                     <children>
-                        <VBox prefHeight="158.0" prefWidth="288.0">
+                  <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <Label text="Data" />
-                              <ListView prefHeight="158.0" prefWidth="274.0" />
-                              <Button mnemonicParsing="false" prefHeight="11.0" prefWidth="60.0" text="Apply" />
+                              <HBox prefHeight="137.0" prefWidth="281.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label prefHeight="21.0" prefWidth="86.0" text="Album Art" />
+                                    <ImageView fitHeight="270.0" fitWidth="401.0" pickOnBounds="true" preserveRatio="true" />
+                                 </children>
+                              </HBox>
                            </children>
-                        </VBox>
-                        <ScrollBar orientation="VERTICAL" prefHeight="100.0" prefWidth="20.0" />
-                     </children>
-                  </HBox>
+                        </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                           <children>
+                              <HBox prefHeight="199.0" prefWidth="295.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label prefHeight="21.0" prefWidth="57.0" text="Data" />
+                                    <ListView prefHeight="239.0" prefWidth="435.0" />
+                                    <ScrollBar orientation="VERTICAL" prefHeight="100.0" prefWidth="20.0" />
+                                 </children>
+                              </HBox>
+                              <Button layoutY="240.0" mnemonicParsing="false" prefHeight="11.0" prefWidth="60.0" text="Apply" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
-      <TextArea layoutX="-1.0" layoutY="379.0" prefHeight="21.0" prefWidth="600.0" />
+      <TextArea prefHeight="21.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
