--- a/src/application/FileManager.fxml
+++ b/src/application/FileManager.fxml
@@ -6,8 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FileManagerController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -34,7 +33,7 @@
             <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
                <children>
                   <TextField promptText="File..." HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" text="Open" />
+                  <Button fx:id="openFile" mnemonicParsing="false" onAction="#loadEditor" text="Open" />
                </children>
             </HBox>
          </bottom>
