--- a/src/application/FileManager.fxml
+++ b/src/application/FileManager.fxml
@@ -14,8 +14,7 @@
                <items>
                   <AnchorPane prefHeight="348.0" prefWidth="134.0">
                      <children>
-                        <ListView prefHeight="348.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                        <Label text="Directories" />
+                        <ListView fx:id="dirResults" prefHeight="348.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
                </items>
@@ -24,8 +23,8 @@
          <top>
             <HBox alignment="CENTER_RIGHT">
                <children>
-                  <TextField promptText="Directory..." HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" text="Go" />
+                  <TextField fx:id="newDir" onAction="#loadNewDir" promptText="Directory..." HBox.hgrow="ALWAYS" />
+                  <Button fx:id="changeDir" mnemonicParsing="false" onAction="#loadNewDir" text="Go" />
                </children>
             </HBox>
          </top>
