--- a/src/application/Editor.fxml
+++ b/src/application/Editor.fxml
@@ -37,7 +37,7 @@
         <items>
           <AnchorPane prefHeight="347.0" prefWidth="295.0">
                <children>
-                  <TableView fx:id="songView" layoutX="106.0" layoutY="101.0" prefHeight="566.0" prefWidth="496.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <TableView fx:id="songTableView" layoutX="106.0" layoutY="101.0" prefHeight="566.0" prefWidth="496.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="366.0" prefWidth="215.0">
