--- a/src/application/Editor.fxml
+++ b/src/application/Editor.fxml
@@ -63,7 +63,7 @@
                                     <ScrollBar orientation="VERTICAL" prefHeight="100.0" prefWidth="20.0" />
                                  </children>
                               </HBox>
-                              <Button layoutY="240.0" mnemonicParsing="false" prefHeight="11.0" prefWidth="60.0" text="Apply" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" />
+                              <Button fx:id="applyButton" layoutY="240.0" mnemonicParsing="false" onAction="#saveMetadata" prefHeight="11.0" prefWidth="60.0" text="Apply" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" />
                            </children>
                         </AnchorPane>
                     </items>
