--- a/src/application/Editor.fxml
+++ b/src/application/Editor.fxml
@@ -11,21 +11,6 @@
    <children>
       <MenuBar fx:id="theMenu" prefHeight="32.0" prefWidth="600.0" AnchorPane.bottomAnchor="568.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
             <Menu mnemonicParsing="false" text="Import">
                <items>
                   <MenuItem fx:id="importSong" mnemonicParsing="false" onAction="#showLoad" text="Song" />
@@ -47,12 +32,19 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <HBox prefHeight="137.0" prefWidth="281.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <VBox prefHeight="270.0" prefWidth="494.0">
                                  <children>
-                                    <Label prefHeight="21.0" prefWidth="86.0" text="Album Art" />
-                                    <ImageView fitHeight="270.0" fitWidth="401.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Label prefHeight="21.0" prefWidth="71.0" text="Album Art" />
+                                    <ImageView fitHeight="211.0" fitWidth="227.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ToolBar prefHeight="40.0" prefWidth="494.0">
+                                      <items>
+                                        <Button fx:id="playBut" onAction="#playSong" mnemonicParsing="false" text="Play" />
+                                          <Button fx:id="stopBut" onAction="#stopSong" layoutX="10.0" layoutY="12.0" mnemonicParsing="false" text="Stop" />
+                                          <Slider fx:id="timeSlide" />
+                                      </items>
+                                    </ToolBar>
                                  </children>
-                              </HBox>
+                              </VBox>
                            </children>
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
